fixed tour causing layout shift in drawer on mobile by setting position absolute

--- a/client/src/planpreview.css
+++ b/client/src/planpreview.css
@@ -1,5 +1,5 @@
 #drawer-nav {
-  position: fixed;
+  position: absolute;
   z-index: 1;
   top: 60px;
   width: 350px;
